--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <!-- bootstrap stylesheet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- styles css -->
+    <link rel="stylesheet" href="style.css/style.css">
 </head>
 
 <body>
@@ -45,7 +47,7 @@
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active ">
-                        <div class="row p-5 bg-info bg-gradient  d-flex align-items-center">
+                        <div class="row p-5 panda-bg-info bg-gradient  d-flex align-items-center">
                             <div class="col-lg-7">
                                 <h1>Cool Dude Headphone</h1>
                                 <p>
@@ -61,7 +63,7 @@
 
                     </div>
                     <div class="carousel-item">
-                        <div class="row p-5 bg-info bg-gradient  d-flex align-items-center">
+                        <div class="row p-5 panda-bg-info bg-gradient  d-flex align-items-center">
                             <div class="col-lg-7">
                                 <h1>Mega LCD TV For Sports</h1>
                                 <p>
@@ -76,7 +78,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="row p-5 bg-info bg-gradient  d-flex align-items-center">
+                        <div class="row p-5 panda-bg-info bg-gradient  d-flex align-items-center">
                             <div class="col-lg-7">
                                 <h1>X-Box for your living room</h1>
                                 <p>
@@ -225,7 +227,7 @@
         </section>
         <!-- Subscribe -->
         <section style="height: 300px;"
-            class="container d-flex justify-content-center bg-info align-items-center rounded-3">
+            class="container d-flex justify-content-center panda-bg-info align-items-center rounded-3">
             <div>
                 <h2>Lets's Stay In Touce</h2>
                 <p>Get updates on sales, specials and more</p>
