--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="style.css/style.css">
 </head>
 
-<body>
+<body class="overflow-auto">
     <!-- header start -->
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
