--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                                     This is the best headphone in the world for people who just want to waste time in
                                     front of funky world</p>
                                 <h1>$420</h1>
-                                <button class="btn btn-warning">Buy Now</button>
+                                <button class="panda-btn-buy-now">Buy Now</button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
@@ -70,7 +70,7 @@
                                     This is the best tv in the world for people who just want to waste time in front of
                                     tv.</p>
                                 <h1>$600</h1>
-                                <button class="btn btn-warning">Buy Now</button>
+                                <button class="panda-btn-buy-now">Buy Now</button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
@@ -86,7 +86,7 @@
                                     of fake sports
                                 </p>
                                 <h1>$1100</h1>
-                                <button class="btn btn-warning">Buy Now</button>
+                                <button class="panda-btn-buy-now">Buy Now</button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
@@ -109,8 +109,8 @@
 
     </header>
     <main>
-        <!-- catagores -->
-        <section class="container my-5">
+        <!-- categories -->
+        <section class="container my-5 categories">
             <div class="row g-5">
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="p-3 border bg-warning d-flex align-items-center justify-content-between rounded-3">
@@ -146,7 +146,7 @@
                                 additional content. This content is a little bit longer.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="panda-btn-buy-now">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -159,7 +159,7 @@
                                 content.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="panda-btn-buy-now">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -173,7 +173,7 @@
                                 height action.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="panda-btn-buy-now">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -192,7 +192,7 @@
                                 additional content. This content is a little bit longer.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="panda-btn-buy-now">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -205,7 +205,7 @@
                                 content.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="panda-btn-buy-now">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -219,7 +219,7 @@
                                 height action.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="panda-btn-buy-now">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -231,8 +231,8 @@
             <div>
                 <h2>Lets's Stay In Touce</h2>
                 <p>Get updates on sales, specials and more</p>
-                <input type="text" placeholder="Your Email">
-                <button class="btn btn-warning">Submit</button>
+                <input class="form-control" type="text" placeholder="Your Email"><br>
+                <button class="panda-btn-buy-now">Submit</button>
             </div>
         </section>
     </main>
